--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -15,7 +15,7 @@
         </ion-item>
       </div>
       <div  [hidden]="!listo_llego">
-        <img src="assets/imgs/final.jpg"/>
+        <img class="gray-img" src="assets/imgs/final.jpg"/>
         <p>Martina te espera</p>
         <ion-item >
           <button (click)="llegar()" ion-button block>Ya llegue!!</button>
@@ -23,18 +23,64 @@
       </div>
     </div>
     <div [hidden]="en_cola">
-      <div class="sms-general" text-center [hidden]="turno != 'false'" padding>
-        <i class="fas fa-eye-slash"></i>
-        <p>No has seleccionado ningun servicio<br><br>1. Selecciona los servicios que deseas en la pantalla de inicio.<br>2. Escoge aquí tu peluquería.</p>
-      </div>
-      <div [hidden]="turno == 'false'">
-        <div [hidden]="!load" style="padding: 9rem;">
-          <!-- <ion-img [src]="imgload" style="width: 100%;height: 100%;"></ion-img> -->
-          <img src="assets/imgs/load.gif"/>
+      <div *ngIf="portrait">
+        <div class="sms-general" text-center [hidden]="turno != 'false'" padding>
+          <i class="fas fa-eye-slash"></i>
+          <p>No has seleccionado ningun servicio<br><br>1. Selecciona los servicios que deseas en la pantalla de inicio.<br>2. Escoge aquí tu peluquería.</p>
         </div>
-        <div [hidden]="load">
-          <!-- <ion-searchbar placeholder="Buscar establecimiento ..."></ion-searchbar> -->
-          <div class="map-google" #map id="map" [style.width.px]="width" [style.height.px]="height" (click)="informacion()"></div>
+        <div [hidden]="turno == 'false'">
+          <div [hidden]="!load" style="padding: 9rem;">
+            <!-- <ion-img [src]="imgload" style="width: 100%;height: 100%;"></ion-img> -->
+            <img src="assets/imgs/load.gif"/>
+          </div>
+          <div [hidden]="load">
+            <!-- <ion-searchbar placeholder="Buscar establecimiento ..."></ion-searchbar> -->
+            <div class="map-google" #map id="map" [style.width.px]="width" [style.height.px]="height" (click)="informacion()"></div>
+          </div>
+        </div>
+      </div>
+      <div *ngIf="!portrait">
+        <div class="sms-general" text-center [hidden]="turno != 'false'" padding>
+          <i class="fas fa-eye-slash"></i>
+          <p>No has seleccionado ningun servicio<br><br>1. Selecciona los servicios que deseas en la pantalla de inicio.<br>2. Escoge aquí tu peluquería.</p>
+        </div>
+        <div [hidden]="turno == 'false'">
+          <div [hidden]="!load" style="padding: 3rem;padding-left:6rem;">
+            <!-- <ion-img [src]="imgload" style="width: 100%;height: 100%;"></ion-img> -->
+            <img src="assets/imgs/load.gif"/>
+          </div>
+          <div [hidden]="load">
+            <!-- <ion-searchbar placeholder="Buscar establecimiento ..."></ion-searchbar> -->
+            <ion-grid>
+              <ion-row>
+                <ion-col col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4>
+                <ion-card>
+                  <img src="assets/imgs/site.jpg"/>
+                    <ion-card-content>
+                      <p>
+                        <b>Donde Martina</b><br>Cra 22 No 32 - 45<br>Estas a 3 turnos de ser atentida<br>¿Deseas tomar turno?
+                      </p>
+                    </ion-card-content>
+                    <ion-row>
+                      <ion-col>
+                        <button ion-button icon-left clear small>
+                          <div>No</div>
+                        </button>
+                      </ion-col>
+                      <ion-col>
+                        <button ion-button icon-left clear small>
+                          <div>Si</div>
+                        </button>
+                      </ion-col>
+                    </ion-row>
+                  </ion-card>
+                </ion-col>
+                <ion-col col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8>
+                  <div class="map-google" #map id="map" [style.width.px]="width" [style.height.px]="height" (click)="informacionV2()"></div>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </div>
         </div>
       </div>
     </div>
